# sharing-server

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
Client/: client.c
Server/: server.c
libs/: hash.c  hash.h  ssl.c  ssl.h
